--- a/index.html
+++ b/index.html
@@ -62,14 +62,17 @@
 							<section class="posts">
 								<article>
 									<header>
-										<span class="date">April 24, 2017</span>
-										<h2><a href="#">Sed magna<br />
-										ipsum faucibus</a></h2>
+										<span class="date">July 22, 2017</span>
+										<h2><a href="#">Web Data Scraping - Largest Companies by Revenue<br />
 									</header>
 									<a href="#" class="image fit"><img src="images/pic02.jpg" alt="" /></a>
-									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
+									<p>In this project, I developed a web scraping tool using Python to extract data from a Wikipedia page listing the largest companies by revenue. The primary libraries utilized were Beautiful Soup for web scraping and Pandas for data manipulation and analysis.<br>
+
+										The tool used Beautiful Soup to parse the HTML content of the Wikipedia page, identifying and extracting relevant data points such as company names and revenue figures. Pandas was employed to clean and transform the extracted data, handling inconsistencies and missing values to ensure the data was structured for analysis. An automated script was implemented to periodically scrape the website, keeping the data up-to-date and demonstrating efficiency in creating repeatable processes. The cleaned and structured data was stored in a Pandas DataFrame, allowing for easy export to various formats such as CSV and Excel for further analysis or reporting.<br>
+										
+										Through this project, I successfully scraped and compiled a comprehensive dataset of the largest companies by revenue, showcasing my ability to handle web scraping challenges and conduct valuable data analysis. This project highlights my technical skills in web scraping, data cleaning, and analysis using Python, demonstrating my capability to manage real-world data projects efficiently and effectively.<br></p>
 									<ul class="actions special">
-										<li><a href="#" class="button">Full Story</a></li>
+										<li><a href="https://github.com/BhuviMurthy/PortfolioProjects/tree/main/Web_Scraping_Projects/largest_companies_by_revenue" class="button">Full Story</a></li>
 									</ul>
 								</article>
 								<article>
