--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 										<span class="date">July 22, 2017</span>
 										<h2><a href="#">Web Data Scraping - Largest Companies by Revenue<br />
 									</header>
-									<a href="#" class="image fit"><img src="images/pic02.jpg" alt="" /></a>
+									<a href="#" class="image fit"><img src="images/top10.png" alt="" /></a>
 									<p>In this project, I developed a web scraping tool using Python to extract data from a Wikipedia page listing the largest companies by revenue. The primary libraries utilized were Beautiful Soup for web scraping and Pandas for data manipulation and analysis.<br>
 
 										The tool used Beautiful Soup to parse the HTML content of the Wikipedia page, identifying and extracting relevant data points such as company names and revenue figures. Pandas was employed to clean and transform the extracted data, handling inconsistencies and missing values to ensure the data was structured for analysis. An automated script was implemented to periodically scrape the website, keeping the data up-to-date and demonstrating efficiency in creating repeatable processes. The cleaned and structured data was stored in a Pandas DataFrame, allowing for easy export to various formats such as CSV and Excel for further analysis or reporting.<br>
