--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 								<article>
 									<header>
 										<span class="date">April 22, 2017</span>
-										<h2><a href="#">Primis eget<br />
+										<h2><a href="#">another web scraping<br />
 										Change Content</a></h2>
 									</header>
 									<a href="#" class="image fit"><img src="images/pic03.jpg" alt="" /></a>
