museum dataset changes

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Massively by HTML5 UP</title>
+		<title>Welcome to my Portfolio - Bhuvaneshwari Murthy</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -45,7 +45,7 @@
 						<!-- Featured Post -->
 							<article class="post featured">
 								<header class="major">
-									<span class="date">June 24, 2024</span>
+									<span class="date">January 24, 2024</span>
 									<h2><a href="#">Retail Dataset  <br />
 									Data Analytics using Python & SQL </a></h2>
 									<p>I worked with a retail order dataset sourced from Kaggle, which I connected to and downloaded directly using Python. I performed data cleaning and handled data types, then loaded the cleaned data into a SQL Server database using Python. After the data was in SQL Server, I conducted a detailed analysis by answering five key questions, demonstrating my skills in data manipulation, ETL processes, and analytical querying. </p>
@@ -62,8 +62,9 @@
 							<section class="posts">
 								<article>
 									<header>
-										<span class="date">July 22, 2017</span>
-										<h2><a href="#">Web Data Scraping - Largest Companies by Revenue<br />
+										<span class="date">February 22, 2024</span>
+										<h2><a href="#">Web Data Scraping<br />
+										<h3>	1. Largest Companies by Revenue </h3>
 									</header>
 									<a href="#" class="image fit"><img src="images/top10.png" alt="" /></a>
 									<p>In this project, I developed a web scraping tool using Python to extract data from a Wikipedia page listing the largest companies by revenue. The primary libraries utilized were Beautiful Soup for web scraping and Pandas for data manipulation and analysis.<br>
@@ -77,17 +78,18 @@
 								</article>
 								<article>
 									<header>
-										<span class="date">April 22, 2017</span>
-										<h2><a href="#">another web scraping<br />
-										Change Content</a></h2>
+										<span class="date">March 22, 2024</span>
+										<h2><a href="#">Kaggle Museum Dataset<br />
+										</a></h2>
 									</header>
-									<a href="#" class="image fit"><img src="images/pic03.jpg" alt="" /></a>
-									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
+									<a href="#" class="image fit"><img src="images/museum.png" alt="" /></a>
+									<p>	I utilized a Kaggle dataset on museum artwork information, which I accessed and downloaded using Python. I cleaned the data and managed data types before loading it into a SQL Server database with Python. Once the data was in SQL Server, I performed a comprehensive analysis by addressing ten key questions, showcasing my expertise in data manipulation, ETL processes, and analytical querying.
+										</p>
 									<ul class="actions special">
-										<li><a href="#" class="button">Full Story</a></li>
+										<li><a href="https://github.com/BhuviMurthy/PortfolioProjects/tree/main/museum_data_analysis" class="button">Full Story</a></li>
 									</ul>
 								</article>
-								<article>
+								<!-- <article>
 									<header>
 										<span class="date">April 18, 2017</span>
 										<h2><a href="#">Ante mattis<br />
@@ -110,7 +112,7 @@
 									<ul class="actions special">
 										<li><a href="#" class="button">Full Story</a></li>
 									</ul>
-								</article>
+								</article> -->
 							</section>
 
 						<!-- Footer -->
