--- a/index.html
+++ b/index.html
@@ -89,6 +89,17 @@
 										<li><a href="https://github.com/BhuviMurthy/PortfolioProjects/tree/main/museum_data_analysis" class="button">Full Story</a></li>
 									</ul>
 								</article>
+								<article>
+									<header>
+										<span class="date"> July 30, 2024</span>
+										<h2> <a href="#">Analyzing Student's Mental Health - Datacamp SQL Projects <br/></a></h2>
+									</header>
+									<a href="#" class="image fit"><img src="images/mentalhealth.jpg" alt=""/></a>
+									<p> Does going to university in a different country affect your mental health? A Japanese international university surveyed its students in 2018 and published a study the following year that was approved by several ethical and regulatory boards.
+
+										The study found that international students have a higher risk of mental health difficulties than the general population, and that social connectedness (belonging to a social group) and acculturative stress (stress associated with joining a new culture) are predictive of depression.</p>
+									<ul class="actions special"><li><a href="https://github.com/BhuviMurthy/PortfolioProjects/tree/main/international_students_mental_health_analysis" class="button"> Full story</a></li></ul>
+								</article>
 								<!-- <article>
 									<header>
 										<span class="date">April 18, 2017</span>
