--- a/index.html
+++ b/index.html
@@ -100,19 +100,19 @@
 										The study found that international students have a higher risk of mental health difficulties than the general population, and that social connectedness (belonging to a social group) and acculturative stress (stress associated with joining a new culture) are predictive of depression.</p>
 									<ul class="actions special"><li><a href="https://github.com/BhuviMurthy/PortfolioProjects/tree/main/international_students_mental_health_analysis" class="button"> Full story</a></li></ul>
 								</article>
-								<!-- <article>
+							 <article>
 									<header>
-										<span class="date">April 18, 2017</span>
-										<h2><a href="#">Ante mattis<br />
-										interdum dolor</a></h2>
+										<span class="date"> </span>
+										<h2><a href="#"><br />
+										WIP</a></h2>
 									</header>
 									<a href="#" class="image fit"><img src="images/pic04.jpg" alt="" /></a>
-									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
+									<p>WIP</p>
 									<ul class="actions special">
 										<li><a href="#" class="button">Full Story</a></li>
 									</ul>
-								</article>
-								<article>
+								</article>	
+							<!--	<article>
 									<header>
 										<span class="date">April 14, 2017</span>
 										<h2><a href="#">Tempus sed<br />
